@@ -9,7 +9,8 @@
 if "%OS%"=="Windows_NT" setlocal
 
 @rem Add default JVM options here. You can also use JAVA_OPTS and GRADLE_OPTS to pass JVM options to this script.
-set DEFAULT_JVM_OPTS=-Xmx1024M -XX:MaxPermSize=256M
+set DEFAULT_JVM_OPTS=-Xmx1024M
+set GRADLE_OPTS="-Dorg.gradle.daemon=false"
 
 set DIRNAME=%~dp0
 if "%DIRNAME%" == "" set DIRNAME=.
